--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 @import "tailwindcss";
+
+
+*{
+   font-family: "Work Sans", sans-serif;
+}
+.work-sans {
+  font-family: "Work Sans", sans-serif;
+}
