--- a/style.css
+++ b/style.css
@@ -5,7 +5,11 @@
 
 *{
    font-family: "Work Sans", sans-serif;
+
 }
 .work-sans {
   font-family: "Work Sans", sans-serif;
+}
+button,li{
+    cursor: pointer;
 }
